# Generated by Django 5.2.8 on 2025-11-20 15:01

import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Atendimento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('dataInicio', models.DateTimeField(default=django.utils.timezone.now, verbose_name='Data de Início')),
                ('dataFim', models.DateTimeField(verbose_name='Data de Fim')),
                ('observacoes', models.TextField(verbose_name='Observações')),
            ],
            options={
                'verbose_name': 'Clientes',
                'verbose_name_plural': 'Clientes',
                'ordering': ['id'],
            },
        ),
    ]
