@startuml
title Aplicativo de Serviço de Atendimento ao Cliente (SAC)

class Cliente {
  - idCliente : int
  - nome : String
  - email : String
  - telefone : String
  - endereco : String
  + abrirChamado() : void
  + realizarAvaliacao() : void
  + visualizarChamados() : void
  + atualizarDados() : void
}

class Chamado {
  - idChamado : int
  - titulo : String
  - descricao : String
  - status : String
  - dataAbertura : Date
  - dataFechamento : Date
  - prioridade : String
  - ans : ANS
  + adicionarComentario() : void
  + atribuirAtendimento() : void
  + alterarStatus() : void
  + exibirDetalhes() : void
}

class Prioridade {
  - idPrioridade : int
  - nome : String
  - descricao : String
  - tempoMaximoRespostaHoras : int
  - tempoMaximoResolucaoHoras : int
  + calcularPrazo() : DateTime
  + exibirRegras() : void
}


class Atendente {
  - idAtendente : int
  - nome : String
  - email : String
  - nivelAcesso : String
  + responderChamado() : void
  + encerrarChamado() : void
  + reabrirChamado() : void
  + registrarAtendimento() : void
}

class Departamento {
  - idDepartamento : int
  - nome : String
  - descricao : String
  - telefoneContato : String
  - empresa : Empresa
  + listarAtendentes() : void
  + contarChamados() : int
  + adicionarAtendente() : void
  + removerAtendente() : void
}

class Atendimento {
  - idAtendimento : int
  - dataInicio : DateTime
  - dataFim : DateTime
  - observacoes : String
  - chamado : Chamado
  - atendente : Atendente
  - avaliacao : Avaliacao
  + iniciarAtendimento() : void
  + finalizarAtendimento() : void
  + registrarObservacao() : void
  + calcularDuracao() : void
}

class Empresa {
  - idEmpresa : int
  - nome : String
  - cnpj : String
  - endereco : String
  - telefone : String
  - emailContato : String
  + cadastrarDepartamento() : void
  + listarDepartamentos() : void
  + atualizarDados() : void
  + removerDepartamento() : void
}

class Avaliacao {
  - idAvaliacao : int
  - nota : int
  - comentario : String
  - dataAvaliacao : Date
  + registrarAvaliacao() : void
  + exibirAvaliacao() : void
  + editarAvaliacao() : void
  + excluirAvaliacao() : void
}

' ---- RELACIONAMENTOS ----
Cliente "1" *--> "N" Chamado : abre >
Cliente "1" *-- "N" Avaliacao : faz >
Avaliacao "1" <--* "1" Atendimento : refere-se a >
Atendente "N" *--> "1" Departamento : pertence a >
Atendimento *-- Chamado : relacionado a >
Atendimento *-- Atendente : realizado por >
Empresa "1" *--> "N" Departamento : contém >
Atendimento *-- Cliente : atende >
Avaliacao --> Cliente : feita por >
Chamado "N" --> "1" Prioridade : possui >

@enduml
